# xspace

./: .gitignore  README.md
workspace/: Cargo.toml  run.nu
workspace/src/: qho.rs  quartic.py  quartic.rs  quartic_amod.rs  quartic_shooting.py  quartic_shooting.rs  quartic_xmod.rs
workspace/src/qho/: 0-plot.py
workspace/src/quartic/: 0-plot.py
workspace/src/quartic_amod/: 0-plot.py
workspace/src/quartic_amod/0/: drive_params.py
workspace/src/quartic_xmod/: 0-plot.py
workspace/src/quartic_xmod/0/: drive_params.py
xspace/: Cargo.toml
xspace/examples/: qho.py  qho.rs
xspace/lib/: docs.rs  error.rs  interp.rs  lib.rs  solve.rs  timedep.rs  units.rs  utils.rs
